--- a/main.html
+++ b/main.html
@@ -81,5 +81,45 @@
             SE21Ucse014
           </p>
     </div>
+    <div class="email-body">Get <a href="main.html">Outlook for Android</a></div>
+    <div class="seperation"></div>
+    <div class="address">
+        <div class="from">
+            <div class="circle warden">BR</div>
+            <div class="akshay">
+                <div class="name">Bhaskara Raju Saripalli</div>
+                <div class="email">bhaskara.saipali@mahindrauniversity.edu.in</div>
+            </div>
+            <div class="more">
+                <svg viewBox="0 0 24 24" width="24" height="24">
+                    <path d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/>
+                  </svg>
+            </div>
+        </div>
+        <div class="for">
+            <div class="auth">
+                <div class="cat"> To</div>
+                <div class="name">Hostel Com</div>
+                <div class="email">hostelcom@mahindrauniversity.ed...</div>
+            </div>
+            <div class="auth">
+                <div class="cat">Cc</div>
+                <div class="name">Sukesh Rakshit</div>
+                <div class="email">sukesh.rakshit@mahindrauniv...</div>
+            </div>
+        </div>
+        <div class="time email">Wednesday, March 26,2025, 10:01 AM</div>
+    </div>
+    <div class="line"></div>
+    <div class="main">
+        <p class="email-body">
+            Confirmed
+            <br><br><br><br>
+            Regards<br>
+            S Bhaskara Raju<br>
+            Hostel warden
+          </p>
+    </div>
+
 </body>
 </html>
