--- a/main.html
+++ b/main.html
@@ -47,12 +47,12 @@
             <div class="auth">
                 <div class="cat"> To</div>
                 <div class="name">Hostel Com</div>
-                <div class="email">hostelcom@mahindrauniversity.ed...</div>
+                <div class="email">hostelcom@mahindrauni...</div>
             </div>
             <div class="auth">
                 <div class="cat">Cc</div>
                 <div class="name">Sukesh Rakshit</div>
-                <div class="email">sukesh.rakshit@mahindrauniv...</div>
+                <div class="email">sukesh.rakshit@ma...</div>
             </div>
         </div>
         <div class="time email">Wednesday, March 26,2025, 9:54 AM</div>
@@ -100,12 +100,12 @@
             <div class="auth">
                 <div class="cat"> To</div>
                 <div class="name">Hostel Com</div>
-                <div class="email">hostelcom@mahindrauniversity.ed...</div>
+                <div class="email">hostelcom@mahindrauni...</div>
             </div>
             <div class="auth">
                 <div class="cat">Cc</div>
                 <div class="name">Sukesh Rakshit</div>
-                <div class="email">sukesh.rakshit@mahindrauniv...</div>
+                <div class="email">sukesh.rakshit@ma...</div>
             </div>
         </div>
         <div class="time email">Wednesday, March 26,2025, 10:01 AM</div>
