--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
     <div id="header">
         <div class="undo icon left">
-            <svg width="28" height="28" viewBox="0 0 24 24" fill="white">
+            <a href="https://outlook.office.com/mail/"><svg width="28" height="28" viewBox="0 0 24 24" fill="white">
                 <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20z"/>
-              </svg>
+              </svg></a>
         </div>
         <div class="delete icon right">
             <svg width="28" height="28" viewBox="0 0 24 24" fill="white">
